# gnome-menu-file-browser-applet

./: CMakeLists.txt  HISTORY  INSTALL  Installation.md  MOVED  NEWS  ProjectHome.md  README  Using.md  libMenuBrowser.md
branches/async/data/: CMakeLists.txt
branches/async/src/: menu-browser.c  menu-browser.h  panel-menu-bar.c  preferences.c  utils.c  utils.h  vfs.c  vfs.h
branches/new-vfs/src/: config.h.in  context-menu.c  context-menu.h  main.c  vfs.c  vfs.h
data/: CMakeLists.txt  GNOME_FileBrowserApplet_Factory.server.in  GNOME_MenuFileBrowserApplet_Factory.server.in  file-browser-applet.glade  file-browser-applet.schemas  file-browser-applet.ui  menu-file-browser-applet.glade
pixmaps/: CMakeLists.txt
src/: CMakeLists.txt  config.h.in  context-menu.c  context-menu.h  main.c  menu-browser.c  menu-browser.h  menu-file-browser-applet.schemas  panel-menu-bar.c  panel-menu-bar.h  preferences.c  preferences.h  utils.c  utils.h  vfs.c  vfs.h
tags/FILE_BROWSER_APPLET_0_5_5/: HISTORY  INSTALL  README
tags/FILE_BROWSER_APPLET_0_5_5/src/: CMakeLists.txt  panel-menu-bar.c  preferences.c  preferences.h  utils.h
tags/FILE_BROWSER_APPLET_0_5_6/: CMakeLists.txt  README  cmake_uninstall.cmake.in
tags/FILE_BROWSER_APPLET_0_5_6/data/: CMakeLists.txt  GNOME_FileBrowserApplet_Factory.server.in
tags/FILE_BROWSER_APPLET_0_5_6/src/: menu-browser.h  panel-menu-bar.c  vfs.c  vfs.h
tags/FILE_BROWSER_APPLET_0_5_8/: CMakeLists.txt  README
tags/FILE_BROWSER_APPLET_0_5_8/data/: CMakeLists.txt  GNOME_FileBrowserApplet_Factory.server.in
tags/FILE_BROWSER_APPLET_0_5_8/pixmaps/: CMakeLists.txt
tags/FILE_BROWSER_APPLET_0_5_8/src/: CMakeLists.txt  context-menu.c  main.c  menu-browser.c  panel-menu-bar.h  preferences.c  utils.c  utils.h  vfs.c
tags/FILE_BROWSER_APPLET_0_6_0/: CMakeLists.txt  HISTORY  INSTALL
tags/FILE_BROWSER_APPLET_0_6_0/src/: CMakeLists.txt  context-menu.c  menu-browser.c  menu-browser.h  panel-menu-bar.h  preferences.h  vfs.h
tags/FILE_BROWSER_APPLET_0_6_1/: HISTORY  INSTALL
tags/FILE_BROWSER_APPLET_0_6_1/data/: GNOME_FileBrowserApplet_Factory.server.in  file-browser-applet.schemas
tags/FILE_BROWSER_APPLET_0_6_1/src/: CMakeLists.txt  context-menu.c  menu-browser.c  panel-menu-bar.c  preferences.h  vfs.c
tags/FILE_BROWSER_APPLET_0_6_6/: HISTORY  README
tags/FILE_BROWSER_APPLET_0_6_6/src/: menu-browser.h  panel-menu-bar.c  panel-menu-bar.h  preferences.h
tags/FILE_BROWSER_APPLET_0_6_6/trunk/: CMakeLists.txt  HISTORY
tags/FILE_BROWSER_APPLET_0_6_6/trunk/src/: config.h.in  context-menu.c  utils.h
trunk/: CMakeLists.txt  HISTORY  INSTALL  NEWS  README  description-pak
trunk/data/: CMakeLists.txt  GNOME_FileBrowserApplet_Factory.server.in  file-browser-applet.glade  file-browser-applet.schemas  file-browser-applet.ui  menu-file-browser-applet.schemas
trunk/doc/C/: file-browser-applet.xml
trunk/pixmaps/: CMakeLists.txt
trunk/src/: CMakeLists.txt  GNOME_MenuFileBrowserApplet_Factory.server  GNOME_MenuFileBrowserApplet_Factory.server.in  config.h.in  context-menu.c  context-menu.h  main.c  menu-browser.c  menu-browser.h  menu-file-browser-applet.schemas  panel-menu-bar.c  panel-menu-bar.h  preferences.c  preferences.h  utils.c  utils.h  vfs.c  vfs.h
wiki/: InstallPackages.wiki  Installation.wiki  Using.wiki  libMenuBrowser.wiki
