INCLUDE (FindPkgConfig)

CONFIGURE_FILE ("${FILE_BROWSER_APPLET_SOURCE_DIR}/src/config.h.in" 
				"${FILE_BROWSER_APPLET_SOURCE_DIR}/src/config.h")

PKG_CHECK_MODULES (LIBPANEL REQUIRED libpanelapplet-2.0)
PKG_CHECK_MODULES (LIBGLADE REQUIRED libglade-2.0)
PKG_CHECK_MODULES (LIBGIO REQUIRED gio-unix-2.0)
PKG_CHECK_MODULES (LIBGTKHOTKEY gtkhotkey-1.0)

INCLUDE_DIRECTORIES (${LIBPANEL_INCLUDE_DIRS}
					 ${LIBGLADE_INCLUDE_DIRS}
					 ${LIBGIO_INCLUDE_DIRS}
					 ${LIBGTKHOTKEY_INCLUDE_DIRS})

LINK_DIRECTORIES (${LIBPANEL_LIBRARY_DIRS}
				  ${LIBGLADE_LIBRARY_DIRS}
				  ${LIBGIO_LIBRARY_DIRS}
				  ${LIBGTKHOTKEY_LIBRARY_DIRS})

SET (SRCS main.c
	 panel-menu-bar.c
 	 menu-browser.c
 	 utils.c
 	 preferences.c
	 context-menu.c
	 vfs.c)

ADD_EXECUTABLE (${EXEC} ${SRCS})

# it seems to link file without the dozens of libs this introduces!?
#TARGET_LINK_LIBRARIES (${EXEC}
#						${LIBPANEL_LINK_FLAGS}
#						${LIBGLADE_LINK_FLAGS}
#						${LIBDESKTOP_LINK_FLAGS})

SET (LIBS panel-applet-2 glade-2.0 gtkhotkey gio-2.0)
TARGET_LINK_LIBRARIES (${EXEC} ${LIBS})

INSTALL (TARGETS ${EXEC} DESTINATION "${CMAKE_INSTALL_LIB_DIR}")
